final fix videos version mobile seccion contacto

--- a/css/demo.css
+++ b/css/demo.css
@@ -401,7 +401,7 @@ footer strong {
     .formVideo .videos .videosTest {
       display: flex; }
       .formVideo .videos .videosTest iframe {
-        border-radius: 20px;
+        border-radius: 30px;
         width: 560px;
         height: 315px; }
   .formVideo .textoForm {
@@ -527,9 +527,9 @@ footer strong {
     flex-direction: column;
     align-items: center; }
   .videosTest iframe {
-    max-width: 340px;
+    max-width: 360px;
     max-height: 203px;
-    margin: 40px 40px; } }
+    margin: 30px 30px; } }
 
 @media (min-width: 280px) and (max-width: 798px) {
   .formVideo .textoForm {
