--- a/scss/end.scss
+++ b/scss/end.scss
@@ -482,7 +482,7 @@ footer {
     .videosTest {
       display: flex;
       iframe {
-        border-radius: 20px;
+        border-radius: 30px;
         width: 560px;
         height: 315px;
       }
@@ -641,9 +641,9 @@ footer {
     align-items: center;
   }
   .videosTest iframe {
-    max-width: 340px;
+    max-width: 360px;
     max-height: 203px;
-    margin: 40px 40px;
+    margin: 30px 30px;
   }
 }
 
